maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:10: error: ':' expected but ',' found.
def setIndications(x, y, valeur) {
                    ^JediEscaper:26: error: identifier expected but '}' found.
}
^